--- a/layout/layout.html
+++ b/layout/layout.html
@@ -109,6 +109,11 @@
 				background: #fff;
 				padding: 0 10px;
 			}
+
+			.box {
+				margin-top: 50px;
+				width: 200px;
+			}
 		</style>
 
 
@@ -237,11 +242,7 @@
 					</div>
 
 
-					<div class="cnt">5</div>
-
-
 					<div class="layer">
-
 
 						<div class="autoCombo">
 							<div class="ele">
@@ -300,6 +301,10 @@
 								</select>
 								<!-- <button id="toggle">Show underlying select</button> -->
 							</div>
+						</div>
+
+
+						<div class="box">
 						</div>
 
 
