--- a/static/css/common.css
+++ b/static/css/common.css
@@ -36,7 +36,7 @@
 .inputBox .inpReset {position:absolute; top:7px; right:7px; width:14px; height:14px; background:url(../images/common/sprite_common.png) no-repeat -20px -40px;}
 .inputBox .inpReset {display:none;}
 
-.inputBox.count {}
+.inputBox.count {width:68px; min-width:auto;}
 .inputBox.count > .inp.Edit_Count {padding:0 24px 0 10px;}
 .inputBox.count > button {position:absolute; right:5px; width:12px; height:6px; font-size:0; background:url(../images/common/sprite_common.png) no-repeat;}
 .inputBox.count > button > span {position:relative; top:0; left:0; display:block; overflow:hidden; text-indent:-999px;}
@@ -85,6 +85,9 @@
 .ui.dropdown.country {width:197px;}
 .inputBox.zipCode {width:104px; min-width:auto;}
 .ui.dropdown + .inputBox.zipCode {vertical-align:top; margin-left:7px;}
+.ui.dropdown > .text {font-size:14px;}
+.ui.search.dropdown.active > input.search, .ui.search.dropdown.visible>input.search {height:100%;}
+.ui.search.selection.dropdown > input.search {height:100%; font-size:14px;}
 
 
 /* checkbox */
