--- a/static/css/contents.css
+++ b/static/css/contents.css
@@ -18,8 +18,9 @@
 .flexWrap:before {content:''; -webkit-box-flex:0; -ms-flex:0; flex:0; text-align:center;}
 .flexLayer {display:inline-block; width:560px; margin:0 auto;}
 .flexLayer > .inner {border:1px solid #d9d9d9; padding:10px; }
-.flexLayer > h1 {}
+.flexLayer > h1 {text-align:center;}
 .flexLayer > h1 + .inner {margin-top:10px; padding:20px 20px; min-height:280px;}
+
 .flexLayer > .inner > .tit {position:relative; font-weight:700; font-size:34px; color:#181818; line-height:40px;}
 .flexLayer > .inner > .tit.thumb {padding-left:50px;}
 .flexLayer > .inner > .tit.thumb > img {position:absolute; top:0; left:0; max-width:41px; max-height:41px;}
@@ -48,28 +49,16 @@ section.contGroup + section.contGroup {margin-top:20px;}
 section.contGroup > .itemList2:nth-of-type(1) {margin-top:20px;}
 
 /* inpItem */
-.inpItem {display:table; width:100%; table-layout:fixed;}
+.inpItem {position:relative;}
+.inpItem:after {content:''; display:block; clear:both;}
 .inpItem + .inpItem {margin-top:15px;}
-.inpItem > dt {display:table-cell; vertical-align:top; width:210px; padding:5px 10px 0 0; font-weight:600; font-size:13px; color:#333; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-.inpItem > dd {display:table-cell; vertical-align:top; font-size:0;}
-
-
-/* itemList */
-.itemList1 {display:table; width:100%; table-layout:fixed;}
-.itemList1 + .itemList1 {margin-top:15px;}
-.itemList1 + .itemList1.fin {padding-top:15px; border-top:1px solid #d9d9d9;}
-.itemList1 > dt {display:table-cell; text-align:right; padding:5px 30px 0 0; font-size:14px; vertical-align:top;}
-.itemList1.fin > dt {font-weight:600;}
-.itemList1 > dd {display:table-cell; width:300px; font-size:0; vertical-align:top;}
-.itemList1 > dd .totalVal {display:inline-block; width:68px; padding:0 24px 0 0; font-weight:600; font-size:14px; line-height:28px; text-align:right;}
-.itemList1 > dd .totalVal + .inputBox {margin-left:7px;}
-.itemList1 > dd .inputBox.count {display:inline-block; width:68px; min-width:auto;}
-.itemList1 > dd .inputBox.count .inp {text-align:right;}
-
-.itemList2 {display:table; width:100%; table-layout:fixed;}
-.itemList2 + .itemList2 {margin-top:15px;}
-.itemList2 > dt {display:table-cell; text-align:right; padding:5px 30px 0 0; font-size:14px; vertical-align:top;}
-.itemList2 > dd {display:table-cell; width:300px; font-size:0; vertical-align:top;}
+.inpItem + .txtBox {margin-top:10px;}
+.txtBox + .inpItem {margin-top:15px;}
+.inpItem > dt {width:210px; float:left; padding:6px 10px 0 0; word-break:break-all;}
+.inpItem > dd {padding:0 0 0 210px;font-size:0;}
+.inpItem > dd .totalVal {display:inline-block; width:68px; padding:0 24px 0 0; font-size:14px; line-height:28px; text-align:right;}
+.inpItem > dd .totalVal + .inputBox {margin-left:7px;}
+.inpItem > dd .inputBox.count .inp {text-align:right;}
 
 
 /* list */
@@ -79,6 +68,9 @@ section.contGroup > .itemList2:nth-of-type(1) {margin-top:20px;}
 
 
 
-
+/* etc */
 .alertMessage {position:relative; padding-left:25px; font-size:14px;}
 .alertMessage:before {content:'';  position:absolute; top:2px; left:0; width:15px; height:13px; background:url(../images/common/sprite_common.png) no-repeat -126px -100px;}
+
+.lineBasic {position:relative; height:40px;}
+.lineBasic:after {content:''; position:absolute; top:19px; left:0; width:100%; border-bottom:1px solid #d9d9d9;}
