--- a/static/css/common.css
+++ b/static/css/common.css
@@ -71,7 +71,7 @@
 
 /* easy-autocomplete */
 .easy-autocomplete-container {position:absolute; left:0; z-index:1; width:100%;}
-.easy-autocomplete-container ul {/* display:block !important */}
+.easy-autocomplete-container ul {}
 .easy-autocomplete-container li {position:relative; border:1px solid #e1e0e8; border-top:0; border-radius:5px; font-size:13px; background:#fff;}
 .easy-autocomplete-container li.selected, .easy-autocomplete-container li:hover {background:#ddd;}
 .easy-autocomplete-container li + li {}
@@ -88,6 +88,16 @@
 .ui.dropdown > .text {font-size:14px;}
 .ui.search.dropdown.active > input.search, .ui.search.dropdown.visible>input.search {height:100%;}
 .ui.search.selection.dropdown > input.search {height:100%; font-size:14px;}
+
+
+/* auto Complete combobox */
+.comboBox {position:relative; display:inline-block; width:170px; vertical-align:top;}
+body .ui-tooltip {display:none !important;}
+.custom-combobox {position:relative; display:block; font-size:14px;}
+.custom-combobox-toggle {position: absolute; top: 0; bottom: 0; margin-left: -1px; padding:0;}
+.custom-combobox-input {display:block; width:100%; margin: 0; padding: 5px 10px;}
+.custom-combobox-toggle {right:0;}
+.comboBox + .inputBox {margin-left:7px;}
 
 
 /* checkbox */
@@ -134,9 +144,6 @@
 .tabListBox {position:absolute; top:20px; right:0; width:150px; height:62px; border:1px solid blue; background:#fff;}
 .tabListBox li {}
 .tabListBox li a {display:block; font-size:14px; color:#333;}
-
-
-
 
 
 /* gnb */
