--- a/static/css/common.css
+++ b/static/css/common.css
@@ -27,6 +27,7 @@
 
 /* input */
 .inputBox {position:relative; display:inline-block; min-width:200px;}
+.inputBox.full {display:block;}
 .inputBox + .inputBox {margin-left:7px;}
 .inputBox .inp {display:block; width:100%; height:28px; padding:0 28px 0 10px; border:1px solid #dcdcdc; font-size:14px; -webkit-transition: all .5s ease; transition: all .5s ease; outline:none; border-radius:5px;}
 .inputBox .inp:focus {border:1px solid #78abea;}
@@ -59,14 +60,14 @@
 .inputBox.schType > .inner {position:relative; display:inline-block;}
 .inputBox.schType > .inner .easy-autocomplete {display:inline-block; font-size:0; width:115px;}
 .inputBox.schType > .inner .easy-autocomplete .inp {padding:0 10px 0 10px;}
-
 .inputBox.schType > .inner .easy-autocomplete .inp {border-radius:0 5px 5px 0;}
 .inputBox.schType > .inner .easy-autocomplete:first-child .inp {border-radius:5px 0 0 5px;}
-
 .inputBox.schType.ty1 > .inner .easy-autocomplete {width:208px;}
 .inputBox.schType.ty1 > .inner .easy-autocomplete:first-child {width:100px;}
 .inputBox.schType.ty2 > .inner .easy-autocomplete {width:150px;}
 .inputBox.schType.ty2 > .inner .easy-autocomplete:first-child {width:100px;}
+.inputBox.full.schType.ty2 > .inner .easy-autocomplete {width:calc(100% - 100px);}
+.inputBox.full.schType > .inner {display:block;}
 
 
 /* easy-autocomplete */
@@ -122,7 +123,7 @@ body .ui-tooltip {display:none !important;}
 
 /* tablist */
 .tabWrap {padding:27px 150px 0 43px; height:82px; /* background:#f5f6fa; */ background:#333; font-size:0; overflow:hidden;}
-.tabList {/* display:inline-block; */ font-size:0; overflow:hidden;}
+.tabList {font-size:0; overflow:hidden;}
 .tabList > li {position:relative; float:left; width:190px; background:#e9f0fb;}
 .tabList > li + li {}
 .tabList > li + li > a:after {content:''; position:absolute; top:12px; left:-1px; width:1px; border-bottom:35px solid #c3ccda;}
