--- a/static/css/contents.css
+++ b/static/css/contents.css
@@ -25,6 +25,7 @@
 .flexLayer > .inner > .tit.thumb {padding-left:50px;}
 .flexLayer > .inner > .tit.thumb > img {position:absolute; top:0; left:0; max-width:41px; max-height:41px;}
 .flexLayer > .inner > .tit + .contGroup {margin-top:25px;}
+.flexLayer > .inner > .tit + .inpItem {margin-top:20px;}
 .flexLayer > .inner > .inpInner {padding:0 50px;}
 
 .inpInner .nTxt {margin-top:20px;}
@@ -54,8 +55,10 @@ section.contGroup > .itemList2:nth-of-type(1) {margin-top:20px;}
 .inpItem:after {content:''; display:block; clear:both;}
 .inpItem + .inpItem {margin-top:15px;}
 .inpItem + .txtBox {margin-top:10px;}
+.inpItem + .contGroup {margin-top:20px;}
 .inpItem > dt {width:210px; float:left; padding:6px 10px 0 0; word-break:break-all;}
-.inpItem > dd {padding:0 0 0 210px; font-size:0; text-align:right;}
+.inpItem > dt + dd {padding:0 0 0 210px;}
+.inpItem > dd {font-size:0;}
 .inpItem > dd .totalVal {display:inline-block; width:68px; padding:0 24px 0 0; font-size:14px; line-height:28px; text-align:right;}
 .inpItem > dd .totalVal + .inputBox {margin-left:7px;}
 .inpItem > dd .inputBox.count .inp {text-align:right;}
