--- a/static/css/contents.css
+++ b/static/css/contents.css
@@ -16,19 +16,29 @@
 /* login */
 .flexWrap{position:relative; display:-webkit-box; display:-ms-flexbox; display:flex; height:100%; -webkit-box-align:center; -ms-flex-align:center; align-items:center;}
 .flexWrap:before {content:''; -webkit-box-flex:0; -ms-flex:0; flex:0; text-align:center;}
-.flexLayer {display:inline-block; width:560px; margin:0 auto;}
-.flexLayer > .inner {border:1px solid #d9d9d9; padding:10px; }
+.flexLayer {display:inline-block; margin:0 auto;}
+.flexLayer > .inner { padding:10px; }
 .flexLayer > h1 {text-align:center;}
 .flexLayer > h1 + .inner {margin-top:10px; padding:20px 20px; min-height:280px;}
 
-.flexLayer > .inner > .tit {position:relative; font-weight:700; font-size:34px; color:#181818; line-height:40px;}
-.flexLayer > .inner > .tit.thumb {padding-left:50px;}
-.flexLayer > .inner > .tit.thumb > img {position:absolute; top:0; left:0; max-width:41px; max-height:41px;}
-.flexLayer > .inner > .tit + .contGroup {margin-top:25px;}
-.flexLayer > .inner > .tit + .inpItem {margin-top:20px;}
-.flexLayer > .inner > .inpInner {padding:0 50px;}
 
-.inpInner .nTxt {margin-top:20px;}
+.flexLayer .flexContent {margin-top:10px; padding:20px 20px; border:1px solid #d9d9d9; font-size:0;}
+.flexLayer .flexContent > .inner {display:inline-block; width:518px; min-height:260px; vertical-align:top;}
+.flexLayer .flexContent > .inner > .inpInner {padding:0 50px;}
+.flexLayer .flexContent > .inner + .inner {padding-left:20px; margin-left:20px; border-left:1px solid #d9d9d9; -webkit-box-sizing:content-box; box-sizing:content-box;}
+
+h2.tit {position:relative; font-weight:700; font-size:34px; color:#181818; line-height:46px;}
+h2.tit.thumb {padding-left:50px;}
+h2.tit.thumb > img {position:absolute; top:0; left:0; max-width:41px; max-height:41px;}
+h2.tit + .inpItem {margin-top:20px;}
+h2.tit + h3.tit {margin-top:20px;}
+
+h3.tit {padding-bottom:10px; font-weight:600; font-size:18px; color:#181818; border-bottom:1px solid #d9d9d9;}
+h3.tit + .inpItem {margin-top:20px;}
+h3.tit + .txtBox {margin-top:20px;}
+
+
+.inpInner .nTxt {font-size:14px; margin-top:20px;}
 .inpInner .nTxt + .inpItem {margin-top:20px;}
 .inpInner > .itemList1:nth-of-type(1) {margin-top:20px;}
 
@@ -36,27 +46,21 @@
 .idArea .inputBox {max-width:none;}
 .loginCheck {margin-top:15px;}
 .joinBtn {margin-top:25px; overflow:hidden;}
-.joinBtn > a {line-height:28px;}
+.joinBtn > a {font-size:14px; line-height:28px;}
 .joinBtn .btns {float:right;}
 .link {display:-webkit-box;display:-ms-flexbox;display:flex; margin-top:15px;}
 .link > a {-webkit-box-flex:1;-ms-flex:1;flex:1;}
 .link > a:nth-child(2) {text-align:center;}
 .link > a:nth-child(3) {text-align:right;}
 
-section.contGroup {}
-section.contGroup > .tit {padding-bottom:10px; font-weight:600; font-size:18px; color:#181818; border-bottom:1px solid #d9d9d9;}
-section.contGroup > .tit + .inpItem {margin-top:20px;}
-section.contGroup > .tit + .txtBox {margin-top:20px;}
-section.contGroup + section.contGroup {margin-top:20px;}
-section.contGroup > .itemList2:nth-of-type(1) {margin-top:20px;}
 
 /* inpItem */
 .inpItem {position:relative;}
 .inpItem:after {content:''; display:block; clear:both;}
 .inpItem + .inpItem {margin-top:15px;}
 .inpItem + .txtBox {margin-top:10px;}
-.inpItem + .contGroup {margin-top:20px;}
-.inpItem > dt {width:210px; float:left; padding:6px 10px 0 0; word-break:break-all;}
+.inpItem + h3.tit {margin-top:20px;}
+.inpItem > dt {width:210px; float:left; padding:6px 10px 0 0; font-size:14px; word-break:break-all;}
 .inpItem > dt + dd {padding:0 0 0 210px;}
 .inpItem > dd {font-size:0;}
 .inpItem > dd .totalVal {display:inline-block; width:68px; padding:0 24px 0 0; font-size:14px; line-height:28px; text-align:right;}
@@ -65,15 +69,17 @@ section.contGroup > .itemList2:nth-of-type(1) {margin-top:20px;}
 
 
 /* txtBox */
-.txtBox {max-height:200px; overflow:auto;}
+.txtBox {max-height:200px; font-size:14px; overflow:auto;}
 .txtBox > .inner {}
 .txtBox + .inpItem {margin-top:15px;}
 .txtBox + .agreeChk {margin-top:15px;}
+.txtBox + h3.tit {margin-top:20px;}
 
 
 /* agreeChk */
-.agreeChk {}
-.agreeChk > .txt {display:inline-block; padding:4px 0 0 0;}
+.agreeChk {position:relative;}
+.agreeChk:after { content:''; display:block; clear:both;}
+.agreeChk > .txt {display:inline-block; padding:4px 0 0 0; font-size:14px;}
 .agreeChk > .checkbox {float:right;}
 
 
