--- a/layout/layout.html
+++ b/layout/layout.html
@@ -42,30 +42,6 @@
 		<style type="text/css">
 			.layer {}
 
-			.layer .double {
-				font-size: 0;
-				height: 100%;
-				background: #ddd;
-			}
-
-			.layer .double>.ele {
-				display: inline-block;
-				font-size: 0;
-				min-width: 300px;
-				max-width: 500px;
-				height: 100%;
-			}
-
-			.layer .double>.ele:first-child {
-				background: blue;
-			}
-
-			.layer .opt {
-				width: 300px;
-				height: 100%;
-				background: #333;
-			}
-
 			.fix2 {
 				position: fixed;
 				top: 700px;
@@ -93,22 +69,23 @@
 			<div class="inner">
 				<nav>
 					<div class="menuAll">
-						<button class="allBtn">
+						<button type="button" class="allBtn">
+							<!-- 2019-02-01 수정 -->
 							<span>Menu</span>
 						</button>
 					</div>
 					<div class="gnb">
 						<ul class="gnbList">
 							<li>
-								<div class="gnbTit">Organization</div>
+								<div class="gnbTit ty1">Organization</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Organization List</a></li>
 									<li><a href="#">Organization</a></li>
 								</ul>
-								<button class="clip on"></button>
+								<button type="button" class="clip on"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Warehousing</div>
+								<div class="gnbTit ty2">Subscription</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Subscription List</a></li>
 									<li><a href="">Subscription List (Waiting)</a></li>
@@ -116,10 +93,10 @@
 									<li><a href="">Subscription List (Cancelled)</a></li>
 									<li><a href="">Subscription List (Withdraw)</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Billing</div>
+								<div class="gnbTit ty3">Billing</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Billing Policy List</a></li>
 									<li><a href="">Invoice List</a></li>
@@ -129,42 +106,42 @@
 									<li><a href="">Invoice List (Cancelled)</a></li>
 									<li><a href="">Scheduler and History</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Usage</div>
+								<div class="gnbTit ty4">Usage</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Usage List</a></li>
 									<li><a href="">Usage List (Seat)</a></li>
 									<li><a href="">Usage List (Transaction)</a></li>
 									<li><a href="">Transaction List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Service</div>
+								<div class="gnbTit ty5">Pricing</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Service List</a></li>
 									<li><a href="#">Tariff List</a></li>
 									<li><a href="">Service Group List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Notice</div>
+								<div class="gnbTit ty6">Notice</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Notice List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Administration</div>
+								<div class="gnbTit ty7">Administration</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">System Code List</a></li>
 									<li><a href="#">Role List</a></li>
 									<li><a href="#">Mail Transmit History</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 						</ul>
 					</div>
@@ -180,28 +157,28 @@
 									<span>House B/L 1</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L 2</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L 3</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L 4</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button> <!-- 2019-02-01 수정 -->
 							</li>
 						</ul>
 						<div class="tabListBox">
@@ -210,7 +187,7 @@
 						</div>
 					</div>
 
-					<div class="Layout_List">
+					<div class="layout Layout_List">
 						<h2 class="tit" id="i10701-serviceListLb">Service List</h2>
 						<div class="schOptionGroup">
 							<ul class="itemList1">
@@ -221,7 +198,7 @@
 											<div class="inputBox schType keyword">
 												<div class="inner">
 													<input type="text" name="" class="inp autoSch keyword name" id="i10003-company" placeholder="Type Company Name">
-													<button class="inpReset"></button>
+													<button type="button" class="inpReset"></button>
 												</div>
 											</div>
 										</dd>
@@ -232,7 +209,7 @@
 										<dt>B/L Date</dt>
 										<dd>
 											<div class="inputBox Edit_date">
-												<input type="text" name="daterange" class="inp daterange" id="" value="01/01/2018 - 01/15/2018" />
+												<input type="text" name="daterange" class="inp daterange" id="" placeholder="From - To" />
 											</div>
 										</dd>
 									</dl>
@@ -270,16 +247,19 @@
 									</dl>
 								</li>
 							</ul>
-							<button class="btn" id="i10701-search">Search</button>
+							<button type="button" class="btn schBtn" id="i10701_search">Search</button>
 						</div>
 						<h3 class="tit" id="i10701-servicesLb">Services</h3>
 						<div class="ibsheepTop">
 							<div class="filter" id="i10701-filterStatus">filter</div>
-							<button class="btn" id="i10701-addService">Add Service</button>
+							<button type="button" class="btn" id="i10701-addService">Add Service</button>
 						</div>
 						<div class="ibsheetDiv">
 							ibsheet
 						</div>
+
+						<div style="height:200px; background:green"></div>
+
 					</div>
 				</div>
 			</div>
@@ -287,7 +267,7 @@
 	</div>
 	<script type="text/javascript">
 		$(function() {
-			var xxx = '<li><a href="#"><span>House B/L 9</span><span>OBK-000468</span></a><button class="tabClose" onclick="TabRemove(this)">Close</button></li>';
+			var xxx = '<li><a href="#"><span>House B/L 9</span><span>OBK-000468</span></a><button type="button" class="tabClose" onclick="TabRemove(this)">Close</button></li>';
 			$('.fix2').click(function() {
 				$(xxx).appendTo('.tabList');
 				TablistSort();
