탭 관련 1차 수정 배포

--- a/layout/layout.html
+++ b/layout/layout.html
@@ -132,10 +132,13 @@
 				</nav>
 				<div class="content">
 					<div class="tabWrap">
+						<div class="tabHome single">
+							<a href="#">Homes</a>
+						</div>
 						<ul class="tabList">
-							<li class="home single">
-								<a href="#">Home</a>
-							</li>
+							<!-- <li class="home single">
+			<a href="#">Home</a>
+		</li> -->
 						</ul>
 						<div class="tabListBox">
 							<span>More</span>
@@ -164,28 +167,20 @@
 			// list tab 활성화
 			$('.tabList').on('click', '.addNewTab', function() {
 				idx = $(this).parent('li').index();
+				console.log('활성화 된 탭 눌렀음 순서 : ' + idx);
 				$('.tabList > li > a').removeClass('on');
 				$('.tabList > li').eq(idx).children('a').addClass('on');
 				$('.content').find('form').hide();
-				$('.content').find('form').eq(idx).show();
+				$('.content').find('form').eq(idx + 1).show();
 			});
 
 			// more 탭 제어
 			$('.tabListBox').on('click', '.addNewTab', function() {
 				idx = $(this).parent('li').index();
 				tabLng = $('.tabList > li').length;
-				moveIdx = tabLng + idx;
-				console.log('박스위치 , 순번 : ' + idx + ' , 탭의 갯수 : ' + tabLng + ' , 이동하는 엘리먼트 위치 : ' + (moveIdx));
-				$('.tabList > li').last().prependTo('.tabListBox > ul');
-				$(this).parent('li').appendTo('.tabList');
-				$('.content').find('form').eq(moveIdx).insertBefore($('.content').find('form').eq(tabLng - 1));
+				moveIdx = tabLng + (idx + 1);
 
-				$('.tabList > li > a').removeClass('on');
-				$('.tabListBox').find('a').removeClass('on');
-				$('.tabList > li').eq(tabLng - 1).children('a').addClass('on');
-				$('.content').find('form').hide();
-				$('.content').find('form').eq(tabLng - 1).show();
-				$('.tabListBox > ul').stop(true, true).slideUp();
+				moreTabSort(idx, tabLng, moveIdx);
 			});
 
 			// more 탭 리스트
@@ -197,6 +192,7 @@
 				}
 			});
 
+			// gnb 탭 추가 및 form 추가
 			var gnbAppen = $('.gnbList').find('a');
 			$(gnbAppen).each(function() {
 				$(this).on('click', function() {
@@ -205,27 +201,43 @@
 					console.log(thisDate);
 
 					if ($('.tabList').find('li').hasClass(thisDate) || $('.tabListBox').find('li').hasClass(thisDate)) {
-						idx = $('.tabList').find('.' + thisDate).index();
-						console.log(idx + ' : 동일 클래스가 있는 경우 class 명 : ' + thisDate);
+						tabListIdx = $('.tabList').find('.' + thisDate).index();
+						tabListBoxIdx = $('.tabListBox').find('.' + thisDate).index();
+						console.log('탭 리스트에 존재하는 경우 : ' + tabListIdx + ',  동일 클래스가 있는 경우 class 명 : ' + thisDate + ' , 탭 리스트에 있는 경우 : ' + tabListBoxIdx);
+
+						//탭 리스트에 존재하는 경우
+						if (tabListIdx >= 0) {
+							console.log('탭 리스트에 존재하는 경우 진행');
+							$('.content').find('form').hide();
+							$('.content').find('form').eq(tabListIdx + 1).show();
+						}
+
+						if (tabListBoxIdx >= 0) {
+							console.log('more 탭 리스트에 존재하는 경우 진행 해당 하는 탭의 인덱스 : ' + tabListBoxIdx);
+							tabLng = $('.tabList > li').length;
+							moveIdx = tabLng + (tabListBoxIdx + 1);
+							moreTabSort(tabListBoxIdx, tabLng, moveIdx);
+						}
 
 						$('.tabList > li > a').removeClass('on');
 						$('.tabListBox > ul > li > a').removeClass('on');
 						$('.tabList').find('.' + thisDate).children('a').addClass('on');
 						$('.tabListBox').find('.' + thisDate).children('a').addClass('on');
 
-						$('.content').find('form').hide();
-						//$('.content').find('form').eq(idx - 1).show();
-						$('.content').find('form').eq(idx).show();
+
 					} else {
 						var make = '<li class="' + thisDate + '"><a href="#" class="addNewTab"><span>' + thisTitle + '</span><span>OBK-000468</span></a><button type="button" class="tabClose" onclick="TabRemove(this)">Close</button></li>;'
 						$(make).appendTo('.tabList');
-						TablistSort();
+
+						$('.tabWrap').find('.tabHome').removeClass('single');
+						TabListSort2();
+
 						idx = $('.tabList').find('.' + thisDate).index();
 						console.log(idx + ' : 동일 클래스가 없는 경우');
 
 						$('.tabList > li > a').removeClass('on');
 						$('.tabListBox > ul > li > a').removeClass('on');
-						$('.tabList > li').eq(idx).children('a').addClass('on');
+						$('.tabList').find('.' + thisDate).children('a').addClass('on');
 						$('.tabListBox').find('.' + thisDate).children('a').addClass('on');
 
 						var dmpDom = '<form action=""><div class="layout" style="background:#fff; height:300px;"><span style="color:#000;">' + thisDate + '</span></div></form>'
@@ -239,6 +251,30 @@
 		});
 
 
+		// more tab sort
+		function moreTabSort(a, b, c) {
+			console.log('탭 모어 : ' + a);
+
+			// 순서가 변경되는 탭의 색상 표시
+			/*
+			$('.content').find('form').eq(moveIdx).css('background','blue');
+			$('.content').find('form').eq(tabLng).css('background','red');
+			*/
+
+			console.log('박스위치 , 순번 : ' + a + ' , 탭의 갯수 : ' + tabLng + ' , 이동하는 엘리먼트 위치 : ' + (moveIdx));
+			$('.tabList > li').last().prependTo('.tabListBox > ul');
+			$('.tabListBox > ul > li').eq(a + 1).appendTo('.tabList');
+
+			// form 위치 변경
+			$('.content').find('form').eq(moveIdx).insertBefore($('.content').find('form').eq(tabLng));
+			$('.tabList > li > a').removeClass('on');
+			$('.tabListBox').find('a').removeClass('on');
+			$('.tabList > li').eq(tabLng - 1).children('a').addClass('on');
+			$('.content').find('form').hide();
+			$('.content').find('form').eq(tabLng).show();
+			$('.tabListBox > ul').stop(true, true).slideUp();
+		}
+
 
 		// 탭 삭제
 		function TabRemove(e) {
@@ -251,62 +287,90 @@
 				console.log('마지막');
 
 				if ($('.tabListBox').css('display') == 'none') {
-					console.log('리스트 박스 없음');
+					console.log('more 박스 없음');
 					$(e).closest('li').remove();
-					$('.content').find('form').eq(idx).remove();
+					$('.content').find('form').eq(idx + 1).remove();
 					$('.tabList > li').last().children('a').addClass('on');
 					tabLng = $('.tabList > li').length;
-					$('.content').find('form').eq(tabLng - 1).show();
-					if (tabLng == 1) {
-						$('.tabList').find('.home').addClass('single');
-					}
-					TablistSort();
+					$('.content').find('form').hide();
+					$('.content').find('form').eq(tabLng).show();
 				} else if ($('.tabListBox').css('display') == 'block') {
-					console.log('리스트 박스 있음');
+					console.log('more 박스 있음');
 					$(e).closest('li').remove();
-					$('.content').find('form').eq(idx).remove();
-					TablistSort();
-					setTimeout(function() {
-						$('.tabList > li').last().children('a').addClass('on');
-						tabLng = $('.tabList > li').length;
-						$('.content').find('form').eq(tabLng - 1).show();
-						if (tabLng == 1) {
-							$('.tabList').find('.home').addClass('single');
-						}
-					}, 210);
+					$('.content').find('form').eq(idx + 1).remove();
+					$('.tabListBox > ul > li').first().appendTo('.tabList');
+					$('.tabList > li').last().children('a').addClass('on');
+					$('.content').find('form').eq(tabLng).show();
+					TabListSort2();
 				}
+
+				tabLng = $('.tabList > li').length;
+				if (tabLng == 0) {
+					$('.tabWrap').find('.tabHome').addClass('single');
+				}
+
 			} else {
 				console.log('다른곳');
 				if ($('.tabListBox').css('display') == 'none') {
-					console.log('리스트 박스 없음');
+					console.log('more 박스 없음');
 					$(e).closest('li').remove();
-					$('.content').find('form').eq(idx).remove();
+					$('.content').find('form').eq(idx + 1).remove();
+					console.log('탭의 길이 : ' + $('.tabList > li').length);
+
 				} else if ($('.tabListBox').css('display') == 'block') {
 					if ($(e).closest('ul').hasClass('tabList')) {
-						console.log('일반 탭 영역');
+						console.log('일반 탭 영역 : ' + idx);
 						$(e).closest('li').remove();
-						$('.content').find('form').eq(idx).remove();
+						$('.content').find('form').eq(idx + 1).remove();
+						TabListSort2();
 					} else {
 						console.log('more 탭 영역');
-						$(e).closest('li').remove();
-						tabLng = $('.tabList > li').length;
-						moveIdx = tabLng + idx;
-						$('.content').find('form').eq(moveIdx).remove();
-					}
+						if ($(e).closest('li').find('a').hasClass('on')) {
+							console.log('자기를 보고 있음');
+							$(e).closest('li').remove();
+							tabLng = $('.tabList > li').length;
+							moveIdx = tabLng + (idx + 1);
+							$('.content').find('form').eq(moveIdx).remove();
+							TabListSort2();
+							$('.tabList > li').last().children('a').addClass('on');
+							$('.content').find('form').eq(tabLng).show();
 
-					TablistSort();
-					setTimeout(function() {
-						$('.tabList').find('a').removeClass('on');
-						$('.tabListBox').find('a').removeClass('on');
-						$('.tabList > li').last().children('a').addClass('on');
-						tabLng = $('.tabList > li').length;
-						$('.content').find('form').hide();
-						$('.content').find('form').eq(tabLng - 1).show();
-						if ($('.tabListBox > ul > li').length < 1) {
-							$('.tabListBox').removeClass('on');
+						} else {
+							console.log('다른 more 탭');
+							$(e).closest('li').remove();
+							tabLng = $('.tabList > li').length;
+							moveIdx = tabLng + (idx + 1);
+							$('.content').find('form').eq(moveIdx).remove();
+							TabListSort2();
 						}
-					}, 210);
+					}
 				}
+			}
+		}
+
+		function TabListSort2() {
+			tabLng = $('.tabList > li').length;
+			console.log('소팅 : 탭 리스트 갯수 : ' + tabLng);
+			if (tabLng > 7) {
+				console.log('more 박스로 누적');
+				$('.tabListBox').show();
+				$('.tabList > li').last().appendTo('.tabListBox > ul');
+			}
+
+			if (tabLng < 7) {
+				console.log('more에서 빼기 : ' + tabLng);
+				$('.tabListBox > ul > li').first().appendTo('.tabList');
+				$('.tabList').find('a').removeClass('on');
+				$('.tabListBox').find('a').removeClass('on');
+				$('.tabList > li').last().children('a').addClass('on');
+				tabLng = $('.tabList > li').length;
+				$('.content').find('form').hide();
+				$('.content').find('form').eq(tabLng).show();
+			}
+
+			if ($('.tabListBox > ul > li').length < 1) {
+				console.log('more box hidden 처리');
+				$('.tabListBox').hide();
 			}
 		}
 	</script>
