--- a/static/css/common.css
+++ b/static/css/common.css
@@ -305,37 +305,39 @@ a.btn {text-decoration:none;}
 
 
 /* tablist */
-.tabWrap {position:relative; z-index:1; padding:30px 150px 0 0; height:90px; background:#f5f6fa; font-size:0;}
-.tabList {font-size:0; overflow:hidden;}
-.tabList > li {position:relative; float:left; /* width:190px; */ width:400px; background:#e9f0fb;}
+.tabWrap {position:relative; z-index:1; padding:28px 115px 0 0; height:84px; background:#f5f6fa; font-size:0;}
+.tabList {display:-webkit-box;display:-ms-flexbox;display:flex; width:100%; padding:0 0 0 70px; font-size:0;}
+.tabList > li {position:relative; background:#e9f0fb; -ms-flex-negative:1; flex-shrink:1; -ms-flex-preferred-size:230px; flex-basis:230px; /* flex:1; */}
 .tabList > li + li {}
-.tabList > li + li > a:after {content:''; position:absolute; top:12px; left:-1px; width:1px; border-bottom:35px solid #c3ccda;}
+.tabList > li > a:after {content:''; position:absolute; top:12px; left:-1px; width:1px; border-bottom:35px solid #c3ccda;}
 .tabList > li:last-child {border-radius:0 10px 0 0;}
-.tabList > li > a {position:relative; z-index:1; display:block; height:60px; padding:8px 0 0 20px; text-decoration:none;}
+.tabList > li > a {position:relative; z-index:1; display:block; height:56px; padding:8px 0 0 20px; text-decoration:none;}
 .tabList > li > a.on {z-index:2; background:#fff; border-radius:10px 10px 0 0;}
-.tabList > li > a.on:before {content:''; position:absolute; top:0; left:-10px; z-index:1; width:18px; height:62px; background:url(../images/common/sprite_common.png) no-repeat -42px 0;}
-.tabList > li > a.on:after {content:''; position:absolute; top:0; left:auto; right:-10px; z-index:1; width:18px; height:62px; background:url(../images/common/sprite_common.png) no-repeat -60px 0; border:none;}
-.tabList > li > a span {display:block; font-weight:600; font-size:14px; color:#405b85;}
-.tabList > li > a span {padding:0 40px 0 0; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-.tabList > li > a span + span {font-weight:400; font-size:17px;}
+.tabList > li > a.on:before {content:''; position:absolute; top:0; left:-10px; z-index:1; width:18px; height:56px; background:url(../images/common/sprite_common.png) no-repeat -42px -132px;}
+.tabList > li > a.on:after {content:''; position:absolute; top:0; left:auto; right:-10px; z-index:1; width:18px; height:56px; background:url(../images/common/sprite_common.png) no-repeat -60px -132px; border:none;}
+.tabList > li > a span {position:absolute; top:8px; left:20px; display:block; width:calc(100% - 20px); height:20px; padding:0 40px 0 0; font-weight:600; font-size:14px; line-height:20px; color:#405b85; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.tabList > li > a span + span {top:28px; font-weight:400; font-size:17px;}
 .tabList > li > a.on span {color:#2346d6;}
-.tabList > li.home {width:77px; text-indent:-9999px; border-radius:10px 0 0 0;}
-.tabList > li.home a.on {background:none !important;}
-.tabList > li.home a:before {content:none !important;}
-.tabList > li.home a:after {content:none !important;}
-.tabList > li.home.single {border-radius:10px 10px 0 0;}
-.tabList > li.home.single a.on {z-index:1; background:none; border-radius:10px 10px 0 0;}
-.tabList > li.home:before {content:''; position:absolute; top:22px; left:27px; width:22px; height:21px; background:url(../images/common/sprite_common.png) no-repeat -40px -72px;}
-.tabList > li.home .tabClose {right:16px;}
+.tabWrap .tabHome {position:absolute; top:28px; left:0; z-index:1; width:70px; height:56px; text-indent:-9999px; border-radius:10px 0 0 0; background:#e9f0fb;}
+.tabWrap .tabHome a {position:relative; display:block; height:55px;}
+.tabWrap .tabHome a.on {background:none !important;}
+.tabWrap .tabHome a:before {content:none !important;}
+.tabWrap .tabHome a:after {content:none !important;}
+.tabWrap .tabHome.single {border-radius:10px 10px 0 0;}
+.tabWrap .tabHome.single a.on {z-index:1; background:none; border-radius:10px 10px 0 0;}
+.tabWrap .tabHome:before {content:''; position:absolute; top:22px; left:24px; width:22px; height:21px; background:url(../images/common/sprite_common.png) no-repeat -40px -72px;}
+.tabWrap .tabHome .tabClose {right:16px;}
 .tabList > li .tabClose {position:absolute; top:12px; right:20px; z-index:2; width:14px; height:14px; overflow:hidden; text-indent:-9999px; background:url(../images/common/sprite_common.png) no-repeat 0 -120px;}
-/* .tabList > li > a.on + .tabClose {background-position:-20px -40px;} */
 
 .tabListBox {display:none;}
 .tabListBox.on {display:block;}
-.tabListBox {position:absolute; top:35px; right:0; z-index:55; width:115px; padding:0 0 0 0; /* border-radius:5px 5px 0 0; */ /* box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); */}
-.tabListBox:before {content:''; position:absolute; top:0; left:-15px; z-index:-1; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
-.tabListBox:after {content:''; position:absolute; top:0; left:-30px; z-index:-2; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
+.tabListBox {position:absolute; top:28px; right:0; z-index:55; width:115px; padding:0 0 0 0; /* border-radius:5px 5px 0 0; */ /* box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); */}
+/*
+.tabListBox:before {content:''; position:absolute; top:0; left:-15px; z-index:-1; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
+.tabListBox:after {content:''; position:absolute; top:0; left:-30px; z-index:-2; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
+*/
 .tabListBox > span {display:block; font-weight:600; font-size:14px; color:#0754d2; line-height:55px; text-align:center; background:#fff; border-radius:5px 5px 0 0; -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); cursor:pointer;}
+.tabListBox ul {display:none;}
 .tabListBox ul {position:absolute; top:55px; right:0; width:212px; max-height:532px; overflow:auto; background:#fff; border:1px solid #b4bcc9; border-radius:5px;}
 .tabListBox li {position:relative; padding:0 38px 0 15px;}
 .tabListBox li:hover {background:#4c7bec;}
@@ -343,6 +345,13 @@ a.btn {text-decoration:none;}
 .tabListBox li:hover:after {content:none;}
 .tabListBox li + li:after {content:''; position:absolute; top:0; left:7px; width:calc(100% - 14px); border-bottom:1px solid #dcdcdc;}
 .tabListBox li a {display:block; padding:7px 0 6px 0; font-size:14px; color:#333; text-decoration:none;}
+/* .tabListBox li a.on {background:#ddd;} */
+
+.tabListBox li a span {display:block; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font-size:13px; color:#4e4f62; line-height:20px;}
+.tabListBox li .tabClose {position:absolute; top:12px; right:14px; width:10px; height:10px;}
+.tabListBox li .tabClose:before {content:''; position:absolute; top:4px; left:-1px; width:12px; border-bottom:2px solid #c5c4cd; -webkit-transform: rotate(45deg); transform: rotate(45deg);}
+.tabListBox li .tabClose:after {content:''; position:absolute; top:4px; right:-1px; width:12px; border-bottom:2px solid #c5c4cd; -webkit-transform: rotate(135deg); transform: rotate(135deg);}
+
 
 /*
 .tabListBox li a.on {background:#ddd;}
@@ -351,10 +360,6 @@ form + form {margin-top:10px; height:40px; overflow:hidden;}
 form .layout {background:none !important;}
 */
 
-.tabListBox li a span {display:block; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font-size:13px; color:#4e4f62; line-height:20px;}
-.tabListBox li .tabClose {position:absolute; top:12px; right:14px; width:10px; height:10px;}
-.tabListBox li .tabClose:before {content:''; position:absolute; top:4px; left:-1px; width:12px; border-bottom:2px solid #c5c4cd; -webkit-transform: rotate(45deg); transform: rotate(45deg);}
-.tabListBox li .tabClose:after {content:''; position:absolute; top:4px; right:-1px; width:12px; border-bottom:2px solid #c5c4cd; -webkit-transform: rotate(135deg); transform: rotate(135deg);}
 
 
 /* gnb */
