--- a/static/css/contents.css
+++ b/static/css/contents.css
@@ -8,7 +8,8 @@
 .wrapper {width:100%; height:100%; min-height:100%;}
 .wrapper > form {height:100%;}
 #container {position:relative; min-height:100%; padding-top:60px; background:#f5f6fa;}
-#container > .inner {display:-webkit-box;display:-ms-flexbox;display:flex; height:100%;}
+/* #container > .inner {display:flex; height:100%;} */
+#container > .inner {height:100%;}
 
 .content {-webkit-box-flex:1;-ms-flex:1;flex:1; position:relative; height:auto; min-height:100%; padding:0 20px 20px 20px;}
 .content {padding:0 20px 20px 305px;}
